--- a/blog.html
+++ b/blog.html
@@ -1,29 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="styles.css">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Living Styleguide</title>
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
 	<header>
-		<h1>Ideas</h1>
+		<!--- navigation -->
 		<nav>
 			<!-- <h1>Main navigation</h1> -->
 			<ul>
-				<li><a href="styleguide.html">Home</a></li>
-				<li><a href="ideas.html">Challenges</a>
+				<li><a href="index.html" aria-label="Home, current page">Home</a></li>
+		    <li><a href="blog.html">Blog</a>
 					<ul>
-						<li><a href="#first">First Idea</a></li>
-						<li><a href="#second">Second Idea</a></li>
-						<li><a href="#third">Third Idea</a></li>
-					</ul>
-				</li>
-				<li><a href="rating.html">Rate me</a></li>
-				<li><a href="more.html">Wanna see more?</a></li>
-			</ul>
+						<li><a href="blog.html#first">First Idea</a></li>
+						<li><a href="blog.html#second">Second Idea</a></li>
+						<li><a href="blog.html#third">Third Idea</a></li>
+		      </ul>
+		    </li>
+		    <li><a href="rating.html">Weekly rate</a></li>
+		    <li><a href="more.html">Wanna see more?</a></li>
+		  </ul>
 		</nav>
 	</header>
 	<section id="first">
