--- a/more.html
+++ b/more.html
@@ -1,29 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Living Styleguide</title>
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
-
-	<!--- navigation -->
-	<nav>
-		<h1>Main navigation</h1>
-		<ul>
-			<li><a href="#main-content" aria-label="Home, current page">Home</a></li>
-			<li><a href="/products">Products</a>
-				<ul>
-					<li><a href="/products/rock">Rock</a></li>
-					<li><a href="/products/paper">Paper</a></li>
-					<li><a href="/products/scissors">Scissors</a></li>
-				</ul>
-			</li>
-			<li><a href="/about">About</a></li>
-			<li><a href="more.html">Wanna see more?</a></li>
-		</ul>
-	</nav>
+	<header>
+		<!--- navigation -->
+		<nav>
+			<!-- <h1>Main navigation</h1> -->
+			<ul>
+				<li><a href="index.html" aria-label="Home, current page">Home</a></li>
+		    <li><a href="blog.html">Blog</a>
+					<ul>
+						<li><a href="blog.html#first">First Idea</a></li>
+						<li><a href="blog.html#second">Second Idea</a></li>
+						<li><a href="blog.html#third">Third Idea</a></li>
+		      </ul>
+		    </li>
+		    <li><a href="rating.html">Weekly rate</a></li>
+		    <li><a href="more.html">Wanna see more?</a></li>
+		  </ul>
+		</nav>
+	</header>
 
 	<!-- login -->
 	<h1>Did you enjoy those funny things? And don't you want to stop here?</h1>
