--- a/blog.html
+++ b/blog.html
@@ -25,9 +25,9 @@
 		  </ul>
 		</nav>
 	</header>
+
 	<section id="first">
 		<!-- step-indicator -->
-		<h1>Live chat with you favourite person</h1>
 		<nav>
 			<h1>Financial support</h1>
 			<progress value="0.25" max="1">35%</progress>
@@ -51,8 +51,18 @@
 			<img src="https://vasilis.nl/voto/fotos/klein/161001180558-de-boot-gemist-150.jpg" alt="A colorful crayon drawing on the hood of a car." />
 			<p>It is conforming in HTML5 for links to include block level elements such as headings and paragraphs, this was forbidden in previous versions of HTML. A recent article by @feather concludes that the inclusion of block level elements inside a link causes some Assistive Technology (AT) to misbehave.</p>
 		</article>
+	</section>
 
-		<!-- chat -->
+	<section id="second">
+		<h1>SVG</h1>
+	</section>
+
+	<section id="third">
+		<h1>Animations</h1>
+	</section>
+
+	<!-- chat -->
+	<section>
 		<ol>
 			<li>
 				<p>Hey!</p>
@@ -81,15 +91,7 @@
 			<textarea name="field-message" id="field-message"></textarea>
 			<button type="submit">Send</button>
 		</form>
-	</section>
-
-	<section id="second">
-		<h1>SVG</h1>
-	</section>
-
-	<section id="third">
-		<h1>Animations</h1>
-	</section>
+	<section>
 
 
 </body>
