--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<header>
 		<!--- navigation -->
 		<nav>
-			<!-- <h1>Main navigation</h1> -->
+			<h1>Main navigation</h1>
 			<ul>
 				<li><a href="" aria-label="Home, current page">Home</a></li>
 		    <li><a href="blog.html">Blog</a>
