--- a/more.html
+++ b/more.html
@@ -6,7 +6,7 @@
     <title>Living Styleguide</title>
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
-<body>
+<body class="one-column-layout">
 	<header>
 		<!--- navigation -->
 		<nav>
@@ -25,26 +25,28 @@
 		  </ul>
 		</nav>
 	</header>
-	<section>
+	<main>
+		<section>
 
-		<!-- login -->
-		<h1>Did you enjoy those funny things? And don't you want to stop here?</h1>
-		<h2>Login in to see more..</h2>
+			<!-- login -->
+			<h1>Did you enjoy those funny things? And don't you want to stop here?</h1>
+			<h2>Login in to see more..</h2>
 
-		<form action="/" method="post">
-		    <label for="field-email">Email</label>
-		    <input type="email" id="field-email" name="field-email" autocomplete="email" required autofocus>
+			<form action="/" method="post">
+			    <label for="field-email">Email</label>
+			    <input type="email" id="field-email" name="field-email" autocomplete="email" required autofocus>
 
-		    <label for="field-password">Password</label>
-		    <input type="password" id="field-password" name="field-password" required>
+			    <label for="field-password">Password</label>
+			    <input type="password" id="field-password" name="field-password" required>
 
-		    <input type="checkbox" id="field-stay-logged-in" name="field-stay-logged-in" value="stay-logged-in">
-		    <label for="field-stay-logged-in">Stay logged in</label>
+			    <input type="checkbox" id="field-stay-logged-in" name="field-stay-logged-in" value="stay-logged-in">
+			    <label for="field-stay-logged-in">Stay logged in</label>
 
-		    <a href="/">Forgot password</a>
+			    <a href="/">Forgot password</a>
 
-		    <button type="submit">Login</button>
-		</form>
-	</section>
+			    <button type="submit">Login</button>
+			</form>
+		</section>
+	</main>
 </body>
 </html>
