--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
-<head>
+<head class="two-column-layout">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Living Styleguide</title>
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
-<body class="two-column-layout">
+<body>
 	<header>
 		<!--- navigation -->
 		<nav>
@@ -26,39 +26,88 @@
 		</nav>
 	</header>
 	<main>
-		<section>
-			<!-- step-indicator -->
-			<nav>
-				<h1>Financial support</h1>
-				<progress value="0.25" max="1">35%</progress>
-				<ol>
-					<li>
-						<a href="/cart">Concept</a>
-					</li>
-					<li>
-						<a href="#main-content" aria-label="Address, current step">Design</a>
-					</li>
-					<li>Coding</li>
-					<li>Testing and end up</li>
-				</ol>
-			</nav>
-			<!-- media-item -->
+		<section id="first">
 			<article>
 				<h1>
-					<a href="/">HTML5 accessibility, are block links hurting accessibility?</a>
+					<a href="">HTML5 accessibility, are block links hurting accessibility?</a>
 				</h1>
 
-				<img src="https://vasilis.nl/voto/fotos/klein/161001180558-de-boot-gemist-150.jpg" alt="A colorful crayon drawing on the hood of a car." />
+        <!-- step-indicator -->
+        <nav>
+          <h1>Your relationship with the cactus</h1>
+          <progress value="0.25" max="1">35%</progress>
+          <ol>
+            <li>
+              <a href="">Living together</a>
+            </li>
+            <li>
+              <a href="" aria-label="Address, current step">Taking care</a>
+            </li>
+            <li>Loving your cactus</li>
+            <li>Attachment</li>
+          </ol>
+        </nav>
+        <!-- media-item -->
+
+				<img src="static/img/photo-1497442995392-ee2f25825e2a.jpeg" alt="A colorful crayon drawing on the hood of a car." />
 				<p>It is conforming in HTML5 for links to include block level elements such as headings and paragraphs, this was forbidden in previous versions of HTML. A recent article by @feather concludes that the inclusion of block level elements inside a link causes some Assistive Technology (AT) to misbehave.</p>
 			</article>
 		</section>
 
-		<section>
-			<h1>SVG</h1>
+		<section id="second">
+			<article>
+				<h1>
+					<a href="">HTML5 accessibility, are block links hurting accessibility?</a>
+				</h1>
+
+        <!-- step-indicator -->
+        <nav>
+          <h1>Your relationship with the cactus</h1>
+          <progress value="0.25" max="1">35%</progress>
+          <ol>
+            <li>
+              <a href="">Living together</a>
+            </li>
+            <li>
+              <a href="" aria-label="Address, current step">Taking care</a>
+            </li>
+            <li>Loving your cactus</li>
+            <li>Attachment</li>
+          </ol>
+        </nav>
+        <!-- media-item -->
+
+				<img src="static/img/photo-1518397289666-db92164ebba8.jpeg" alt="A colorful crayon drawing on the hood of a car." />
+				<p>It is conforming in HTML5 for links to include block level elements such as headings and paragraphs, this was forbidden in previous versions of HTML. A recent article by @feather concludes that the inclusion of block level elements inside a link causes some Assistive Technology (AT) to misbehave.</p>
+			</article>
 		</section>
 
-		<section>
-			<h1>Animations</h1>
+		<section id="third">
+			<article>
+				<h1>
+					<a href="">HTML5 accessibility, are block links hurting accessibility?</a>
+				</h1>
+
+        <!-- step-indicator -->
+        <nav>
+          <h1>Your relationship with the cactus</h1>
+          <progress value="0.25" max="1">35%</progress>
+          <ol>
+            <li>
+              <a href="">Living together</a>
+            </li>
+            <li>
+              <a href="" aria-label="Address, current step">Taking care</a>
+            </li>
+            <li>Loving your cactus</li>
+            <li>Attachment</li>
+          </ol>
+        </nav>
+        <!-- media-item -->
+
+				<img src="static/img/photo-1429308755210-25a272addeb3.jpeg" alt="A colorful crayon drawing on the hood of a car." />
+				<p>It is conforming in HTML5 for links to include block level elements such as headings and paragraphs, this was forbidden in previous versions of HTML. A recent article by @feather concludes that the inclusion of block level elements inside a link causes some Assistive Technology (AT) to misbehave.</p>
+			</article>
 		</section>
 
 		<!-- chat -->
@@ -86,7 +135,7 @@
 				</li>
 			</ol>
 
-			<form action="/" method="post">
+			<form action="" method="post">
 				<label for="field-message">Message</label>
 				<textarea name="field-message" id="field-message"></textarea>
 				<button type="submit">Send</button>
