--- a/rating.html
+++ b/rating.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
-<head>
+<head class="one-column-layout">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Living Styleguide</title>
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
-<body class="one-column-layout">
+<body>
 	<header>
 		<!--- navigation -->
 		<nav>
