Changed menu and progress bar

--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,9 @@
 				<li><a href="index.html" aria-label="Home, current page">Home</a></li>
 		    <li><a href="blog.html">Blog</a>
 					<ul>
-						<li><a href="blog.html#first">First Idea</a></li>
-						<li><a href="blog.html#second">Second Idea</a></li>
-						<li><a href="blog.html#third">Third Idea</a></li>
+						<li><a href="blog.html#first">First</a></li>
+						<li><a href="blog.html#second">Second</a></li>
+						<li><a href="blog.html#third">Third</a></li>
 		      </ul>
 		    </li>
 		    <li><a href="rating.html">Weekly rate</a></li>
@@ -34,18 +34,19 @@
 
         <!-- step-indicator -->
         <nav>
-          <h1>Your relationship with the cactus</h1>
+					<h1>How is your cactus doing?</h1>
           <progress value="0.25" max="1">35%</progress>
           <ol>
             <li>
-              <a href="">Living together</a>
+              <a href="">Okay</a>
             </li>
             <li>
-              <a href="" aria-label="Address, current step">Taking care</a>
+              <a href="" aria-label="Address, current step">Average</a>
             </li>
-            <li>Loving your cactus</li>
-            <li>Attachment</li>
+            <li>Good</li>
+            <li>Wow!</li>
           </ol>
+
         </nav>
         <!-- media-item -->
 
@@ -62,17 +63,17 @@
 
         <!-- step-indicator -->
         <nav>
-          <h1>Your relationship with the cactus</h1>
+          <h1>How is your cactus doing?</h1>
           <progress value="0.25" max="1">35%</progress>
           <ol>
             <li>
-              <a href="">Living together</a>
+              <a href="">Okay</a>
             </li>
             <li>
-              <a href="" aria-label="Address, current step">Taking care</a>
+              <a href="" aria-label="Address, current step">Average</a>
             </li>
-            <li>Loving your cactus</li>
-            <li>Attachment</li>
+            <li>Good</li>
+            <li>Wow!</li>
           </ol>
         </nav>
         <!-- media-item -->
@@ -90,19 +91,18 @@
 
         <!-- step-indicator -->
         <nav>
-          <h1>Your relationship with the cactus</h1>
+          <h1>How is your cactus doing?</h1>
           <progress value="0.25" max="1">35%</progress>
-          <ol>
+					<ol>
             <li>
-              <a href="">Living together</a>
+              <a href="">Okay</a>
             </li>
             <li>
-              <a href="" aria-label="Address, current step">Taking care</a>
+              <a href="" aria-label="Address, current step">Average</a>
             </li>
-            <li>Loving your cactus</li>
-            <li>Attachment</li>
-          </ol>
-        </nav>
+            <li>Good</li>
+            <li>Wow!</li>
+          </ol>        </nav>
         <!-- media-item -->
 
 				<img src="static/img/photo-1429308755210-25a272addeb3.jpeg" alt="A colorful crayon drawing on the hood of a car." />
@@ -140,7 +140,7 @@
 				<textarea name="field-message" id="field-message"></textarea>
 				<button type="submit">Send</button>
 			</form>
-		<section>
+		</section>
 	</main>
 
 
