--- a/more.html
+++ b/more.html
@@ -15,9 +15,9 @@
 				<li><a href="index.html" aria-label="Home, current page">Home</a></li>
 		    <li><a href="blog.html">Blog</a>
 					<ul>
-						<li><a href="blog.html#first">First Idea</a></li>
-						<li><a href="blog.html#second">Second Idea</a></li>
-						<li><a href="blog.html#third">Third Idea</a></li>
+						<li><a href="blog.html#first">First</a></li>
+						<li><a href="blog.html#second">Second</a></li>
+						<li><a href="blog.html#third">Third</a></li>
 		      </ul>
 		    </li>
 		    <li><a href="rating.html">Weekly rate</a></li>
