--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<header>
 		<!--- navigation -->
 		<nav>
-			<h1>Main navigation</h1>
+			<!-- <h1>Main navigation</h1> -->
 			<ul>
-				<li><a href="" aria-label="Home, current page">Home</a></li>
+				<li><a href="index.html" aria-label="Home, current page">Home</a></li>
 		    <li><a href="blog.html">Blog</a>
 					<ul>
-						<li><a href="blog.html#first">First Idea</a></li>
-						<li><a href="blog.html#second">Second Idea</a></li>
-						<li><a href="blog.html#third">Third Idea</a></li>
+						<li><a href="blog.html#first">First</a></li>
+						<li><a href="blog.html#second">Second</a></li>
+						<li><a href="blog.html#third">Third</a></li>
 		      </ul>
 		    </li>
 		    <li><a href="rating.html">Weekly rate</a></li>
