Rating page and :focus styling

--- a/more.html
+++ b/more.html
@@ -41,7 +41,7 @@
 				    <input type="checkbox" id="field-stay-logged-in" name="field-stay-logged-in" value="stay-logged-in">
 				    <label for="field-stay-logged-in">Stay logged in</label>
 
-				    <a href="/">Forgot password</a>
+				    <a href="">Forgot password</a>
 
 				    <button type="submit">Login</button>
 				</form>
