--- a/rating.html
+++ b/rating.html
@@ -34,7 +34,7 @@
 					<?xml version="1.0" encoding="utf-8"?>
 					<!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 					<svg version="1.1" id="Laag_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-						 viewBox="300 0 300 595.3" xml:space="preserve">
+					width="10vw" height="50vh" viewBox="300 -150 250 595.3" style="enable-background:new 0 0 841.9 495.3;" xml:space="preserve">
 					<style type="text/css">
 						.st0{fill:#E56D37;}
 						.st1{fill:#F39975;}
@@ -704,7 +704,7 @@
 					<?xml version="1.0" encoding="utf-8"?>
 					<!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 					<svg version="1.1" id="Laag_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-						 viewBox="300 0 300 595.3" style="enable-background:new 0 0 841.9 595.3;" xml:space="preserve">
+					width="10vw" height="50vh" viewBox="300 -150 250 595.3" style="enable-background:new 0 0 841.9 495.3;" xml:space="preserve">
 					<style type="text/css">
 						.st0{fill:#E56D37;}
 						.st1{fill:#F39975;}
@@ -1374,7 +1374,7 @@
 					<?xml version="1.0" encoding="utf-8"?>
 					<!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 					<svg version="1.1" id="Laag_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-						 viewBox="300 0 300 595.3" style="enable-background:new 0 0 841.9 595.3;" xml:space="preserve">
+					width="10vw" height="50vh" viewBox="300 -150 250 595.3" style="enable-background:new 0 0 841.9 495.3;" xml:space="preserve">
 					<style type="text/css">
 						.st0{fill:#E56D37;}
 						.st1{fill:#F39975;}
@@ -2044,7 +2044,7 @@
 					<?xml version="1.0" encoding="utf-8"?>
 					<!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 					<svg version="1.1" id="Laag_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-						 viewBox="300 0 300 595.3" style="enable-background:new 0 0 841.9 595.3;" xml:space="preserve">
+					width="10vw" height="50vh" viewBox="300 -150 250 595.3" style="enable-background:new 0 0 841.9 495.3;" xml:space="preserve">
 					<style type="text/css">
 						.st0{fill:#E56D37;}
 						.st1{fill:#F39975;}
