--- a/more.html
+++ b/more.html
@@ -31,7 +31,7 @@
 				<!-- login -->
 				<h2>Login in to see more</h2>
 
-				<form action="" method="post">
+				<form action="#" method="post">
 				    <label for="field-email">Email</label>
 				    <input type="email" id="field-email" name="field-email" autocomplete="email" required autofocus>
 
